--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,14 @@
 /* Reset styles */
+html {
+	box-sizing: border-box;
+}
+
+* {
+	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
+}
+
 h1,
 h2,
 h3,
