--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,10 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url(simplelightbox/dist/simple-lightbox.min.css);
+@import url('./1-gallery.css');
+@import url('./2-form.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +24,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 16px;
+  font-style: normal;
+  color: #2e2f42;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.04em;
 }
