--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,3 +36,11 @@ body {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.04em;
 }
+
+label {
+  font-family: inherit;
+}
+
+button {
+  font-family: inherit;
+}
